@@ -1,3 +1,7 @@
+2007-07-18  Petr Ovtchenkov  <ptr@island.corbina.net>
+
+	* test/stem: boost unit test framework replaced by exam.
+
 2007-07-12  Petr Ovtchenkov  <ptr@island.corbina.net>
 
 	* libstem: library version 4.6.0
